--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
             <!-- Left Sidebar -->
             <div class="sidebar">
                 <h1>Jiazuo Zhang</h1>
-                <p>Currently pursuing a degree in Computer Science, I possess expertise in creating user interfaces and refining software components. Proficient in JavaScript, React, and Angular, eager to apply skills for front end, full stack and map developments.</p>
+                <p>Jiazuo Zhang
+Software Engineer | AI-Driven Platforms | Frontend Systems
+MSCS @ Northeastern University
+Boston, MA</p>
                 </br>
                 <div class="contact-icons">
                     <a href="mailto:jiazuozhang04@gmail.com">
@@ -173,7 +176,7 @@
                             <img src="android_app.png" alt="Project 8" />
                         </a>
 
-                        <a class="project"  target="_blank">
+                        <a class="project"  href="https://github.com/JZZhang04/GiddyUpGPT">
                             <h3>GiddyUpGPT: Arthur Morgan's Digital Ranch</h3>
                             <img src="Arthur.png" alt="Project 7" />
                         </a>
